--- a/_posts/2019-11-16-블로그를 시작하며.md
+++ b/_posts/2019-11-16-블로그를 시작하며.md
@@ -1,7 +1,24 @@
+---
+layout: post
+title:  블로그를 시작하며
+excerpt: "Just about everything you'll need to style in the theme: headings, paragraphs, blockquotes, tables, code blocks, and more."
+categories: [hello world]
+comments: true
+image:
+  feature: https://images.unsplash.com/photo-1440635592348-167b1b30296f?crop=entropy&dpr=2&fit=crop&fm=jpg&h=475&ixjsv=2.1.0&ixlib=rb-0.3.5&q=50&w=1250
+  credit: thomas shellberg
+  creditlink: https://unsplash.com/photos/Ki0dpxd3LGc
+---
+
+### Body text
 2019년 11월 16일 
  작년 12월쯤 스타트업 회사의 면접을 보러 간적이 있었다.  
  한파주의보가 불어서 너무 추웠던 겨울 나는 논현역에 면접장소까지  
  걸어가면 벌벌떨었던 기억이 있다  
+
+ 
+### Blockquotes
+
  
  ![](http://jjalbox.com/jjalbang/jbox1R8.jpg)  
  
