--- a/_posts/2019-11-16-블로그를 시작하며.md
+++ b/_posts/2019-11-16-블로그를 시작하며.md
@@ -19,8 +19,7 @@ image:
  
 ### Blockquotes
 
- 
- ![](http://jjalbox.com/jjalbang/jbox1R8.jpg)  
+ ![Smithsonian Image](http://jjalbox.com/jjalbang/jbox1R8.jpg)
  
  
  그렇게 도착한 회사의 모습은 내가 상상했던 스타트업에 가까운 모습을 하고  
@@ -32,16 +31,15 @@ image:
  이 문제를 멋지게 풀어내서 회사에 입사하리라 하지만 첫 번째 관문이 생겨버렸다  
  문제가 모두 영어로 나오는게 아닌가....   
  
- 
- ![](https://postfiles.pstatic.net/MjAxNzAzMDJfNCAg/MDAxNDg4NDM4MjYxODE1.IAlT_bAyQS5RmHXyVtR5U2_QeA1ld-arh7qdKKll3LYg.eSXX07Q_z-sudvIpuRI9GuT2EYUqnKbStADn3OXp_x0g.GIF.clue5/%ED%99%A9%EB%8B%B9%EC%A7%A4_%EB%8B%B9%ED%99%A9%EC%A7%A4_%EC%96%B4%EC%9D%B4%EC%97%86%EC%9D%8C_%EC%A7%A4%EB%B0%A9_%EC%A7%A4%EB%B0%A9%EB%B6%80%EC%9E%90_%ED%81%B4%EB%A3%B0%EB%A3%A8_12123-4.gif?type=w2)
+  ![Smithsonian Image](https://postfiles.pstatic.net/MjAxNzAzMDJfNCAg/MDAxNDg4NDM4MjYxODE1.IAlT_bAyQS5RmHXyVtR5U2_QeA1ld-arh7qdKKll3LYg.eSXX07Q_z-sudvIpuRI9GuT2EYUqnKbStADn3OXp_x0g.GIF.clue5/%ED%99%A9%EB%8B%B9%EC%A7%A4_%EB%8B%B9%ED%99%A9%EC%A7%A4_%EC%96%B4%EC%9D%B4%EC%97%86%EC%9D%8C_%EC%A7%A4%EB%B0%A9_%EC%A7%A4%EB%B0%A9%EB%B6%80%EC%9E%90_%ED%81%B4%EB%A3%B0%EB%A3%A8_12123-4.gif?type=w2)
  
 
- 그 순간 생각했다 이 드럽게 못하는 영어를 조금씩 이라도 해석해가며 시간을 보내야  
- 하는 것인가 아니면 포기를 해야하나 5초 정도 고민을 하고 결정을 했다  
-  
- 바로 구글 번역기를 돌려버렸다.  
- 나의 행동은 면접관들을 당황시키기에 충분했던 것 같다  
- 누구도 번역기를 돌리는 면접자가 없었다고 들었던것 같다 ㅋㅋㅋ  
+    그 순간 생각했다 이 드럽게 못하는 영어를 조금씩 이라도 해석해가며 시간을 보내야  
+    하는 것인가 아니면 포기를 해야하나 5초 정도 고민을 하고 결정을 했다  
+    
+    바로 구글 번역기를 돌려버렸다.  
+    나의 행동은 면접관들을 당황시키기에 충분했던 것 같다  
+    누구도 번역기를 돌리는 면접자가 없었다고 들었던것 같다 ㅋㅋㅋ  
  
   ![](https://postfiles.pstatic.net/MjAxNzAzMDJfMTcx/MDAxNDg4NDM4MjYyMTQ5.WdXVmzfNjZr-lnLgry3jMONv1741OVfyd7u-zclscQEg._MPUTmzPZ9U4BOEc-uucatk6zzp9mgQ-NHasJ3dpNDYg.GIF.clue5/%ED%99%A9%EB%8B%B9%EC%A7%A4_%EB%8B%B9%ED%99%A9%EC%A7%A4_%EC%96%B4%EC%9D%B4%EC%97%86%EC%9D%8C_%EC%A7%A4%EB%B0%A9_%EC%A7%A4%EB%B0%A9%EB%B6%80%EC%9E%90_%ED%81%B4%EB%A3%B0%EB%A3%A8_12123-5.gif?type=w2)
    
