--- a/_posts/2019-11-16-블로그를 시작하며.md
+++ b/_posts/2019-11-16-블로그를 시작하며.md
@@ -10,55 +10,37 @@ image:
   creditlink: https://unsplash.com/photos/Ki0dpxd3LGc
 ---
 
-### Body text
-2019년 11월 16일 
- 작년 12월쯤 스타트업 회사의 면접을 보러 간적이 있었다.  
- 한파주의보가 불어서 너무 추웠던 겨울 나는 논현역에 면접장소까지  
- 걸어가면 벌벌떨었던 기억이 있다  
+## 블로그를 시작하며
 
- 
-### Blockquotes
+취업을 목적으로 네이버블로그를 통해서 기술블로그를 만들고 운영한 경험은 있었지만 
+깃 블로그를 선택한 이유는 간단하다 
+취준생시절 면접을 봤던 한 스타트업에서 기술블로그는 보통 깃으로 한다는 말을 듣고
+깃 블로그를 만들어 보겠다고 생각했기 때문에 깃블로그를 하게 되었다.
 
- ![Smithsonian Image](http://jjalbox.com/jjalbang/jbox1R8.jpg)
- 
- 
- 그렇게 도착한 회사의 모습은 내가 상상했던 스타트업에 가까운 모습을 하고  
- 있었고 면접을 보기위해 들어간 방에는 내가 앉을 자리 앞에 위치한 노트북  
- 한대와 그 노트북의 화면을 보여주고 있는 큰 티비한대가 있었다.  
- 
- 바로 내가 코딩테스트를 하는 모습을 면접관들이 티비를 통해서 보는 방식이였다  
- 그래도 한참 의욕과 열정이 넘치던 시기라 약간의 설렘이 있었다   
- 이 문제를 멋지게 풀어내서 회사에 입사하리라 하지만 첫 번째 관문이 생겨버렸다  
- 문제가 모두 영어로 나오는게 아닌가....   
- 
-  ![Smithsonian Image](https://postfiles.pstatic.net/MjAxNzAzMDJfNCAg/MDAxNDg4NDM4MjYxODE1.IAlT_bAyQS5RmHXyVtR5U2_QeA1ld-arh7qdKKll3LYg.eSXX07Q_z-sudvIpuRI9GuT2EYUqnKbStADn3OXp_x0g.GIF.clue5/%ED%99%A9%EB%8B%B9%EC%A7%A4_%EB%8B%B9%ED%99%A9%EC%A7%A4_%EC%96%B4%EC%9D%B4%EC%97%86%EC%9D%8C_%EC%A7%A4%EB%B0%A9_%EC%A7%A4%EB%B0%A9%EB%B6%80%EC%9E%90_%ED%81%B4%EB%A3%B0%EB%A3%A8_12123-4.gif?type=w2)
- 
+### 현재의 나
 
-    그 순간 생각했다 이 드럽게 못하는 영어를 조금씩 이라도 해석해가며 시간을 보내야  
-    하는 것인가 아니면 포기를 해야하나 5초 정도 고민을 하고 결정을 했다  
-    
-    바로 구글 번역기를 돌려버렸다.  
-    나의 행동은 면접관들을 당황시키기에 충분했던 것 같다  
-    누구도 번역기를 돌리는 면접자가 없었다고 들었던것 같다 ㅋㅋㅋ  
- 
-  ![](https://postfiles.pstatic.net/MjAxNzAzMDJfMTcx/MDAxNDg4NDM4MjYyMTQ5.WdXVmzfNjZr-lnLgry3jMONv1741OVfyd7u-zclscQEg._MPUTmzPZ9U4BOEc-uucatk6zzp9mgQ-NHasJ3dpNDYg.GIF.clue5/%ED%99%A9%EB%8B%B9%EC%A7%A4_%EB%8B%B9%ED%99%A9%EC%A7%A4_%EC%96%B4%EC%9D%B4%EC%97%86%EC%9D%8C_%EC%A7%A4%EB%B0%A9_%EC%A7%A4%EB%B0%A9%EB%B6%80%EC%9E%90_%ED%81%B4%EB%A3%B0%EB%A3%A8_12123-5.gif?type=w2)
-   
- 포기하거나 문제를 풀 시간을 영어를 번역하는데 낭비하는 것보단  
- 좋은 선택이지 않았을까 싶다  
-  
- 그렇게 코딩테스트가 끝나고 면접관 분들과 본격적인 면접을 진행했는데  
- 개발블로그를 운영하는지에 대한 질문에 당당하게 대답을 했고  
- 면접관분들도 블로그를 운영하는것을 좋게 봐주는듯 했다.  
- 
- 네이버블로그를 운영한다고 하기전까지는   
- 그 회사는 찐개발자들이였다 개발블로그라 하면 깃블로그 하다못해 워드프레스나 티스토리를  
- 했어야 했나보다   
- 
- 물론 내가 떨어진 이유는 블로그 때문은 전혀 아니다   
- 내가 면접내내 보여준 모습은 충분히 탈락에 이유가 충분했었으니  
- 하지만 1년전에 도대체 깃블로그는 뭐가 다른거지 라는 생각을 하며  
- 한번 운영을 해봐야지 하던 생각이 무려 1년만에 돌아와 지금 이 블로그에  
- 첫 글을 게시하는 순간이 되어버렸다.  
- 
- 멋지고 화려한 개발블로그라긴 보단 무언가 계속 배워가려는 블로그를 만들어야겠다.  
- ![](https://postfiles.pstatic.net/MjAxNzAzMDJfNDgg/MDAxNDg4NDM4MjYyNjk5.oA0ACuhdTBErTf1pAnxyhmQHMuVbnETLu1UP7Wbm9B8g.DryztYk3agf164w7dV0nz1hR2ifSMSW61HwrYCscyqQg.GIF.clue5/%ED%99%A9%EB%8B%B9%EC%A7%A4_%EB%8B%B9%ED%99%A9%EC%A7%A4_%EC%96%B4%EC%9D%B4%EC%97%86%EC%9D%8C_%EC%A7%A4%EB%B0%A9_%EC%A7%A4%EB%B0%A9%EB%B6%80%EC%9E%90_%ED%81%B4%EB%A3%B0%EB%A3%A8_12123-6.gif?type=w2)
+현재는 마드라스체크라는 스타트업 회사의 웹/서버 개발팀의 개발자로 일을 하고 있다.
+신입으로써 개발을 하면서 느꼈던 점과 어려웠던 부분 등을 블로그의 기술하려고 한다
+글 재주가 없다보니 마구잡이로 포스팅을 하겠지만 내가 성장하는데 조금이나마 도움이 되고자 하는 기술블로그이니 내 마음대로 내가 끌리는대로 적어올릴 생각이다.
+
+### 28살
+
+> 2019년 1월 2일 27살의 나이로 입사를 했다.
+이제 곧 2020년 1월 2일이 된다. 
+27의 나보다 28의 내가 잘하고 있는걸까?
+
+### 2020년 목표
+
+1. 개발
+   1. 기술 블로그 운영
+   2. 서버 기술 공부
+   3. 함수형 프로그래밍
+   4. 일렉트론 / 노드
+   5. 서브 프로젝트 진행
+2. 일상
+   1. 다이어트
+   2. 해외여행 
+
+## Notices
+
+2019-12-27 깃블로그를 하니 마치 진짜 개발자가 된 기분 (:
