--- a/_posts/2019-11-16-블로그를 시작하며.md
+++ b/_posts/2019-11-16-블로그를 시작하며.md
@@ -5,7 +5,7 @@ excerpt: "Just about everything you'll need to style in the theme: headings, par
 categories: [hello world]
 comments: true
 image:
-  feature: /img/first_post_img.png
+  feature: first_post_img.png
   credit: thomas shellberg
   creditlink: https://unsplash.com/photos/Ki0dpxd3LGc
 ---
