--- a/_posts/2019-11-16-블로그를 시작하며.md
+++ b/_posts/2019-11-16-블로그를 시작하며.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  블로그를 시작하며
-excerpt: "2019년이 가기전에 만든 깃블로그"
+excerpt: ""
 categories: [hello world]
 comments: true
 image:
