--- a/_posts/2020-01-04-함수형 프로그래밍.md
+++ b/_posts/2020-01-04-함수형 프로그래밍.md
@@ -8,7 +8,7 @@ image:
   feature: http://image.yes24.com/momo/TopCate1718/MidCate005/171742937.jpg?crop=entropy&dpr=2&fit=crop&fm=jpg&h=475&ixjsv=2.1.0&ixlib=rb-0.3.5&q=50&w=1250
   credit: indongyoo
   creditlink: 
-  styles: width:100px;
+  styles: width:100px; height:500px;
 ---
 
 ## 함수형 프로그래밍을 배우는 이유
