--- a/_posts/2020-01-04-함수형 프로그래밍.md
+++ b/_posts/2020-01-04-함수형 프로그래밍.md
@@ -2,13 +2,13 @@
 layout: post
 title: 함수형 프로그래밍 (Functional Programming)  
 excerpt: ""
-categories: [server]
+categories: [develop]
 comments: true
 image:
   feature: http://image.yes24.com/momo/TopCate1718/MidCate005/171742937.jpg?crop=entropy&dpr=2&fit=crop&fm=jpg&h=475&ixjsv=2.1.0&ixlib=rb-0.3.5&q=50&w=1250
   credit: indongyoo
   creditlink: 
-  styles: width:50%;
+  styles: width:35%;
 ---
 
 ## 함수형 프로그래밍을 배우는 이유
@@ -37,7 +37,7 @@ image:
 함수형 프로그래밍의 유인동 저자가 인프런에서 무료로 강의를 제공하는 부분도 있어서 함수형 프로그래밍을 공부하고자 하는 분들은 해당사이트에서 강의를 들어보는것도 좋을 것 같다
 
 (인프런 강의)
-[inflearn](https://www.inflearn.com/course/%ED%95%A8%EC%88%98%ED%98%95-%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D/)
+[inflearn ](https://www.inflearn.com/course/%ED%95%A8%EC%88%98%ED%98%95-%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D/)
 
 (깃허브)
 [github](https://github.com/indongyoo/functional-javascript)
