--- a/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
+++ b/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
@@ -5,7 +5,7 @@ excerpt: ""
 categories: [git]
 comments: true
 image:
-  feature: /img/metadata.PNG
+  feature: metadata.PNG
   credit: Jekyll
   creditlink: 
 ---
