--- a/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
+++ b/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
@@ -1,5 +1,15 @@
-
-
+---
+layout: post
+title: 깃블로그(github.io) Front_Matter 
+excerpt: ""
+categories: [git]]
+comments: true
+image:
+  feature: metadata.PNG
+  credit: jekyllrb-ko.github.io
+  creditlink: https://jekyllrb-ko.github.io/
+  styles: width:35%;
+---
 ### 깃블로그 Front-matter
 
 
