--- a/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
+++ b/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
@@ -5,7 +5,7 @@ excerpt: ""
 categories: [git]]
 comments: true
 image:
-  feature: metadata.PNG
+  feature: /img/metadata.PNG
   credit: jekyllrb-ko.github.io
   creditlink: https://jekyllrb-ko.github.io/
 ---
@@ -27,9 +27,9 @@ image:
         categories: [git]
         comments: true
         image:
-        feature: metadata.PNG
-        credit: indongyoo
-        creditlink: 
+          feature: metadata.PNG
+          credit: indongyoo
+          creditlink: 
     ---
 ```
 
