--- a/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
+++ b/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
@@ -2,10 +2,10 @@
 layout: post
 title: 깃블로그(github.io) Front_Matter 
 excerpt: ""
-categories: [git]]
+categories: [git]
 comments: true
 image:
-  feature: /img/metadata.PNG
+  feature: metadata.png
   credit: jekyllrb-ko.github.io
   creditlink: https://jekyllrb-ko.github.io/
 ---
