--- a/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
+++ b/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
@@ -9,28 +9,115 @@ image:
   credit: jekyllrb-ko.github.io
   creditlink: https://jekyllrb-ko.github.io/
 ---
+
 ### 깃블로그 Front-matter
 
-
-
-깃블로그를 사용하면서 포스팅 작성할때 `타이틀` , `카테고리` , `포스트이미지` 등 기본적인 작성에 필요한 요소들을 메타데이터를 이용해서 사용하고 있다. 내가 사용중인 `Jekyll leonids theme` 를 가져다 사용하니 기본적으로 지원해주는 메타데이터가 있었다. 하지만 포스트 이미지를 올리는 부분에 이미지의 사이즈나 위치 등 스타일적인 요소를 지정하는 부분을 설정이 불가능 하다보니 이미지가 너무 크게 나타나거나 오른쪽에 이미지를 붙이지 못하는 경우가 발생했다 
+깃블로그를 사용하면서 포스팅 작성할때 `타이틀` , `카테고리` , `포스트이미지` 등 기본적인 작성에 필요한 요소들을 메타데이터를 이용해서 사용하고 있다. 내가 사용중인 `Jekyll leonids theme` 를 가져다 사용하니 기본적으로 지원해주는 메타데이터가 있었다. 하지만 포스트 이미지를 올리는 부분에 이미지의 사이즈나 위치 등 스타일적인 요소를 지정하는 부분을 설정이 불가능 하다보니 이미지가 너무 크게 나타나거나 오른쪽에 이미지를 붙이지 못하는 경우가 발생했다  
 
 
 
-![Front-metter](/img/예시1.PNG)
+![Front-metter](/img/예시1.PNG){}
+이미지가 너무 큰 영역을 차지하고 있다.
+
+
+## 해결방안
+
 
 ```
+기존의 Front-Matter 양식
     ---
-        layout: post
-        title: 깃블로그(github.io) 메타데이터(Front-matter) 만들기 (메타데이터 이미지에 CSS넣기)
-        excerpt: ""
-        categories: [git]
-        comments: true
-        image:
-          feature: metadata.PNG
-          credit: indongyoo
-          creditlink: 
+    layout: post
+    title: 함수형 프로그래밍 (Functional Programming)  
+    excerpt: ""
+    categories: [develop]
+    comments: true
+    image:
+      feature: http://image.yes24.com/momo/TopCate1718/MidCate005/171742937.jpg?crop=entropy&dpr=2&fit=crop&fm=jpg&h=475&ixjsv=2.1.0&ixlib=rb-0.3.5&q=50&w=1250
+      credit: indongyoo
+      creditlink: 
     ---
 ```
 
-![Front-metter](/img/예시.PNG) 
+```
+수정한 Front-Matter 양식
+    ---
+    layout: post
+    title: 함수형 프로그래밍 (Functional Programming)  
+    excerpt: ""
+    categories: [develop]
+    comments: true
+    image:
+      feature: http://image.yes24.com/momo/TopCate1718/MidCate005/171742937.jpg?crop=entropy&dpr=2&fit=crop&fm=jpg&h=475&ixjsv=2.1.0&ixlib=rb-0.3.5&q=50&w=1250
+      credit: indongyoo
+      creditlink: 
+      styles: width:35%;
+    ---
+```
+
+
+결국 Front_matter 또한 이를 다 명시해두고 해당부분에 값을 집어넣어주는 방식으로 작동을 하는데 `_layouts` 폴더에 위치한 `post_listing.html`의 코드를 확인해보자
+
+---
+layout: default
+---
+
+~~~
+{% for post in site.posts %}
+<section class="post">
+  <header class="post-header">
+    <p class="post-meta">
+      <span class="post-date">
+        {{ post.date | date: "%-d %b %Y" | upcase }}
+      </span>
+      {% if post.categories.size > 0 %}
+      •
+      {% for cat in post.categories %}
+        <a class="post-cat" href="{{ site.url }}/categories/#{{ cat }}">{{ cat }}</a>
+        {% unless forloop.last %}
+        <span>/</span>
+        {% endunless %}
+      {% endfor %}
+      {% endif %}
+    </p>
+    <h4>
+      <a href="{{ site.url }}{{ post.url }}" class="post-title" title="{{ post.title | escape }}">{{ post.title }}</a>
+      {% if post.link %}
+      <a class="post-title-link" href="{{ post.link }}" target="_blank" title="{{ post.title | escape }}"><i class="fa fa-external-link"></i></a>
+      {% endif %}
+    </h4>
+
+    {% if post.author %}
+      {% assign author = site.data.authors[post.author] %}
+    {% else %}
+      {% assign author = site.owner %}
+    {% endif %}
+
+    </header>
+
+    {% if post.excerpt %}
+    <div class="post-description">
+      <p>
+        {{ post.excerpt }}
+      </p>
+    </div>
+    {% endif %}
+
+    {% if post.image.feature %}
+    <div class="post-image-feature">
+      <img style="{{post.image.styles}}" src=
+      {% if post.image.feature contains 'http' %}
+      "{{ post.image.feature }}"
+      {% else %}
+      "{{ site.url }}/img/{{ post.image.feature }}"
+      {% endif %}
+      alt="{{ post.title | escape }} feature image">
+
+      {% if post.image.credit %}
+      <span class="image-credit">Photo Credit: <a href="{{ post.image.creditlink }}">{{ post.image.credit }}</a></span>
+      {% endif %}
+    </div><!-- /.image-wrap -->
+    {% endif %}
+
+</section>
+{% endfor %}
+~~~
