--- a/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
+++ b/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
@@ -64,7 +64,9 @@ image:
   <header class="post-header">
     <p class="post-meta">
       <span class="post-date">
-        {{ post.date | date: "%-d %b %Y" | upcase }}
+        `{{ post.date | date: "%-d %b %Y" | upcase }}`
+        \{{ post.date | date: "%-d %b %Y" | upcase }}\
+        "{{ post.date | date: "%-d %b %Y" | upcase }}"
       </span>
       {% if post.categories.size > 0 %}
       •
