--- a/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
+++ b/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
@@ -64,14 +64,18 @@ image:
   <header class="post-header">
     <p class="post-meta">
       <span class="post-date">
-        `{{ post.date | date: "%-d %b %Y" | upcase }}`
-        \{{ post.date | date: "%-d %b %Y" | upcase }}\
-        "{{ post.date | date: "%-d %b %Y" | upcase }}"
+```
+        {{ post.date | date: "%-d %b %Y" | upcase }}
+
+```html
       </span>
+```
       {% if post.categories.size > 0 %}
       •
       {% for cat in post.categories %}
+```html
         <a class="post-cat" href="{{ site.url }}/categories/#{{ cat }}">{{ cat }}</a>
+```
         {% unless forloop.last %}
         <span>/</span>
         {% endunless %}
