--- a/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
+++ b/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
@@ -57,70 +57,27 @@ image:
 
 결국 Front_matter 또한 이를 다 명시해두고 해당부분에 값을 집어넣어주는 방식으로 작동을 하는데 `_layouts` 폴더에 위치한 `post_listing.html`의 코드를 확인해보자
 
+![post_listig.html의 일부분](/img/metadata/ex3)
 
 ```html
-{% for post in site.posts %}
-<section class="post">
-  <header class="post-header">
-    <p class="post-meta">
-      <span class="post-date">
+ <img style="{{post.image.styles}}" src=
 ```
-        {{ post.date | date: "%-d %b %Y" | upcase }}
 
-```html
-      </span>
+이미지태그에 style 속성을 만들어주고 그값으로 post.image.styles 라는 값을 바인딩해주도록 설정을하면 된다. 그러면 위에서 지정했던 메타데이터에 styles의 값인 width 35%의 값이 들어간다
+width값뿐 아니라 모든 css속성을 지정해줄수 있게 되는것이다.
+
 ```
-      {% if post.categories.size > 0 %}
-      •
-      {% for cat in post.categories %}
-```html
-        <a class="post-cat" href="{{ site.url }}/categories/#{{ cat }}">{{ cat }}</a>
+    image:
+      feature: http://image.yes24.com/momo/TopCate1718/MidCate005/171742937.jpg?crop=entropy&dpr=2&fit=crop&fm=jpg&h=475&ixjsv=2.1.0&ixlib=rb-0.3.5&q=50&w=1250
+      credit: indongyoo
+      creditlink: 
+      styles: width:35%;
 ```
-        {% unless forloop.last %}
-        <span>/</span>
-        {% endunless %}
-      {% endfor %}
-      {% endif %}
-    </p>
-    <h4>
-      <a href="{{ site.url }}{{ post.url }}" class="post-title" title="{{ post.title | escape }}">{{ post.title }}</a>
-      {% if post.link %}
-      <a class="post-title-link" href="{{ post.link }}" target="_blank" title="{{ post.title | escape }}"><i class="fa fa-external-link"></i></a>
-      {% endif %}
-    </h4>
 
-    {% if post.author %}
-      {% assign author = site.data.authors[post.author] %}
-    {% else %}
-      {% assign author = site.owner %}
-    {% endif %}
+## 결과확인
+![styles 속성을 준 결과물](/img/metadata/ex4)
 
-    </header>
 
-    {% if post.excerpt %}
-    <div class="post-description">
-      <p>
-        {{ post.excerpt }}
-      </p>
-    </div>
-    {% endif %}
-
-    {% if post.image.feature %}
-    <div class="post-image-feature">
-      <img style="{{post.image.styles}}" src=
-      {% if post.image.feature contains 'http' %}
-      "{{ post.image.feature }}"
-      {% else %}
-      "{{ site.url }}/img/{{ post.image.feature }}"
-      {% endif %}
-      alt="{{ post.title | escape }} feature image">
-
-      {% if post.image.credit %}
-      <span class="image-credit">Photo Credit: <a href="{{ post.image.creditlink }}">{{ post.image.credit }}</a></span>
-      {% endif %}
-    </div><!-- /.image-wrap -->
-    {% endif %}
-
-</section>
-{% endfor %}
-```
+## Notices
+Front-metter 기능을 활용해서 더욱 간단하고 편리한 기능을 추가적으로 적용이 가능할 것 같다 끝.
+{: .notice}
