--- a/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
+++ b/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
@@ -55,7 +55,7 @@ image:
 ```
 결국 Front_matter 또한 이를 다 명시해두고 해당부분에 값을 집어넣어주는 방식으로 작동을 하는데 `_layouts` 폴더에 위치한 `post_listing.html`의 코드를 확인해보자
 
-![post_listig.html의 일부분](/img/metadata/ex3)
+![post_listig.html의 일부분](/img/metadata/ex3.PNG)
 
 ```html
  <img style="">
@@ -65,7 +65,7 @@ image:
 width값뿐 아니라 모든 css속성을 지정해줄수 있게 되는것이다.
 
 ## 결과확인
-![styles 속성을 준 결과물](/img/metadata/ex4)
+![styles 속성을 준 결과물](/img/metadata/ex4.PNG)
 
 
 ## Notices
