--- a/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
+++ b/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
@@ -61,8 +61,10 @@ image:
  <img style="">
 ```
 
-이미지태그에 style 속성을 만들어주고 그값으로 `"\{\{post.image.styles\}\}"` 라는 값을 바인딩해주도록 설정을하면 된다. 그러면 위에서 지정했던 메타데이터에 styles의 값인 width 35%의 값이 들어간다
-width값뿐 아니라 모든 css속성을 지정해줄수 있게 되는것이다.
+이미지태그에 style 속성을 만들어주고 그값으로 `"\{\{post.image.styles\}\}"` 라는 값을 바인딩해주도록 설정을하면 된다. 그러면 위에서 지정했던 메타데이터에 styles의 값인 width 35%의 값이 들어간다 width값뿐 아니라 모든 css속성을 지정해줄수 있게 되는것이다.
+
+![지킬 공식사이트 참조](/img/metadata/ex5.PNG)
+`지킬 공식사이트 참조`
 
 ## 결과확인
 ![styles 속성을 준 결과물](/img/metadata/ex4.PNG)
