--- a/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
+++ b/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
@@ -58,8 +58,7 @@ image:
 
 결국 Front_matter 또한 이를 다 명시해두고 해당부분에 값을 집어넣어주는 방식으로 작동을 하는데 `_layouts` 폴더에 위치한 `post_listing.html`의 코드를 확인해보자
 
-![post_listig.html의 일부분](/img/metadata/ex3.PNG)
-
+![post_listig.html의 일부분](/img/metadata/ex3.PNG){: margin-top: "30px";margin-bottom: 30px;}
 
 
 ```html
@@ -67,11 +66,11 @@ image:
 ```
 `post.image.feature` 값이 드러가는 img태그를 찾아서 style 속성을 만들어주고 그값으로 `post.image.styles` 라는 값을 바인딩해주도록 설정을하면 된다. 그러면 위에서 지정했던 메타데이터에 styles의 값인 width 35%의 값이 들어간다 width값뿐 아니라 모든 css속성을 지정해줄수 있게 되는것이다.
 
-![지킬 공식사이트 참조 <](/img/metadata/ex5.PNG)
+![지킬 공식사이트 참조 <](/img/metadata/ex5.PNG){: margin-top: "30px";margin-bottom: 30px;}
 `지킬 공식사이트 참조`
 
 ## 결과확인
-![styles 속성을 준 결과물 <](/img/metadata/ex4.PNG)
+![styles 속성을 준 결과물 <](/img/metadata/ex4.PNG){: margin-top: "30px";margin-bottom: 30px;}
 
 
 ## Notices
