--- a/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
+++ b/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
@@ -58,7 +58,7 @@ image:
 
 결국 Front_matter 또한 이를 다 명시해두고 해당부분에 값을 집어넣어주는 방식으로 작동을 하는데 `_layouts` 폴더에 위치한 `post_listing.html`의 코드를 확인해보자
 
-![post_listig.html의 일부분 ](/img/metadata/ex3.PNG){: style="margin-top:30px; margin-bottom:30px; margin-left:"0px!important"}
+![post_listig.html의 일부분 ](/img/metadata/ex3.PNG){: style="margin:0px"}
 
 
 ```html
