--- a/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
+++ b/_posts/2020-01-05-깃블로그(github.io) Front_Matter.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 깃블로그(github.io) Front_Matter 
+title: 깃블로그(github.io) Front_Matter 추가/수정하기
 excerpt: ""
 categories: [git]
 comments: true
