--- a/_posts/2020-03-05-Socket.io_분산처리_1.md
+++ b/_posts/2020-03-05-Socket.io_분산처리_1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  [플로우] Node + Socket.io (Cluster) + Redis 기반의 채팅서버 분산처리 개발기 
+title:  Node + Socket.io (Cluster) + Redis 기반의 채팅서버 분산처리 개발기 
 excerpt: ""
 categories: [develop]
 comments: true
