채팅서버업그레이드

--- a/_posts/2020-03-05-Socket.io_분산처리_1.md
+++ b/_posts/2020-03-05-Socket.io_분산처리_1.md
@@ -14,18 +14,18 @@ image:
 
 ### 채팅이 안되요!? 
 
-최근들어 채팅이 간헐적으로 먹통이 되는 순간이 발생하는 경우가 많아졌습니다. 채팅서버의 CPU를 확인해보니 Node가 CPU 100% 상태가 되어 있는 상황을 확인했습니다. 최근들어 플로우의 클라우드 고객 유입이 많아지면서 단일 채팅서버로 구성되어 있는 부분에서 부하가 온것 같다고 판단을 했습니다. 하지만 어떠한 작업을 하더라도 확실한 원인 파악이 필요하다고 생각했습니다!
+최근들어 채팅이 간헐적으로 먹통이 되는 순간이 발생하는 경우가 많아졌습니다. 채팅서버의 CPU를 확인해보니 Node가 CPU 100% 상태가 되어 있는 상황에 채팅이 안되는 상황이 발생하더군요. 아무래도 플로우의 클라우드 고객 유입이 많아지면서 단일 채팅서버로 구성되어 있는 부분에서 부하를 견디지 못한 것 같다고 판단을 했습니다. 하지만 어떠한 작업을 하더라도 확실한 원인 파악이 필요합니다 그래서 몇가지 확인 작업을 진행했습니다.
 
 ## 채팅서버는 하루동안 얼마나 많이 사용될까?
 
-많은 사용자로 인한 부하라는 의심에 확신을 주기 위해 우선 1시간마다 Socket.io 에서 메시지의 호출이 이루어지는 체크를 하기 위해 메모리기반의 Redis를 붙이고 호출이 발생할때마다 Count를 올리는 로직을 붙였습니다. 기본적으로 운영에 하는 작업은 더욱 더 신중하게 진행해야 하고 방어로직이 존재 해야하기 때문에 개발서버에서 많은 테스트를 진행하고 Redis서버가 죽더라도 Socket간의 통신에는 지장이 없도록 처리를 했습니다.
+많은 사용자로 인한 부하라는 의심에 확신을 주기 위해 우선 1시간마다 Socket.io 에서 메시지의 호출이 이루어지는 체크를 하기 위해 메모리기반의 Redis를 붙이고 Socket.io 서버에 호출이 발생할때마다 Count를 올리는 로직을 붙였습니다. 기본적으로 운영중인 서버에 적용을 하는 작업은 더욱 더 신중하게 진행해야 하고 방어로직이 존재 해야하기 때문에 개발서버에서 많은 테스트를 진행하고 Redis서버가 죽더라도 Socket간의 통신에는 지장이 없도록 처리를 했습니다.
 
 
 ## 10시, 14시 ,15시 ~ 18시
 
 ![artillery.io](https://cloudnesil.com/wp-content/uploads/2019/04/artillery-logo.png)
 
-이 시간대에 가장 많은 통신이 이루어졌고 해당 시간대에 5분마다 Node의 CPU 상태를 체크하는 로직을 추가했습니다 해당 시간대와 CPU가 상승한 시점을 비교해보니 얼추 비슷하게 맞아떨어지는 것을 확인했습니다. 하지만 좀더 확실한 테스트가 필요해서 `artillery.io` 라는 가벼운 툴을 이용해서 부하테스트를 진행 했습니다. 
+ 10시, 14시 ,15시 ~ 18시 시간대에 가장 많은 Client와 Server간 통신이 이루어졌고 해당 시간대에 5분마다 Node의 CPU 상태를 체크하는 로직을 만들어서 Crontob을 활용해서 txt.파일의 저장하도록 했습니다 그렇게 하루가 지나고 시간대 별로 채팅서버에서 호출이 많이 일어난 시점과 CPU가 상승한 시점을 비교해보니 얼추 비슷하게 맞아떨어지는 것을 확인했습니다. 하지만 좀더 확실한 테스트가 필요해서 `artillery.io` 라는 가벼운 툴을 이용해서 부하테스트를 진행 했습니다. 
 
 ``` yml
 config:
@@ -43,6 +43,10 @@ scenarios:
           data: "helloTest"  
       - think: 5
 ```
+
+Target은 내가 테스트할 서버의 주소를 지정해주었습니다.
+Phases는 테스트를 요청할 시간과 비율을 정하는부분 입니다.
+60초동안 매초 100개의 요청을 보내도록 설정한 부분입니다.
 
 간단하게 1초마다 100개의 connenct을 연결하고 sendMessage라는 채널에 Hello_Test라는 메시지를 보내는 부하테스트를 진행했습니다. 19시쯤 플로우의 채팅서버의 CPU상태와 동일한 15~30% 정도의 CPU사용량이 나타났습니다. 너무 많은 통신으로 인한 부하가 발생했다고 할 수 있는 자료와 테스트가 끝났으니 해결을 해보도록 하겠습니다.
 
