성능향상기 이미지 변경

--- a/_posts/2020-08-30-Electron 성능 향상기.md
+++ b/_posts/2020-08-30-Electron 성능 향상기.md
@@ -5,10 +5,9 @@ excerpt: ""
 categories: [develop]
 comments: true
 image:
-  feature: 
-  credit: rumor1993
-  creditlink: https://rumor1993.github.io/
-  styles: width:664px; 
+  feature: https://raw.githubusercontent.com/rocketlaunchr/electron-alert/HEAD/assets/electronalert.png
+  credit: electron-alert
+  creditlink: https://www.npmjs.com/package/electron-alert?activeTab=readme
 ---
 
 # 일렉트론 앱 성능 향상
@@ -40,5 +39,4 @@ image:
 <span style="color:skyblue">Performance</span>와 
 <span style="color:skyblue">Memory</span> 
 탭에서 각각 분석 할 수 있다고 합니다.
-
 
