--- a/_posts/2020-08-30-Electron 성능 향상기.md
+++ b/_posts/2020-08-30-Electron 성능 향상기.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: Electron [성능향상을 위한 7가지] 1. 불필요한 모듈 제거 
+title: Electron 1.불필요한 모듈 제거 
 excerpt: ""
-categories: [develop], [Electron 성능향상]
+categories: [develop], [Electron 성능향상], [성능향상을 위한 7가지]
 comments: true
 image:
   feature: https://raw.githubusercontent.com/rocketlaunchr/electron-alert/HEAD/assets/electronalert.png
