--- a/_posts/2020-08-30-Electron 성능 향상기.md
+++ b/_posts/2020-08-30-Electron 성능 향상기.md
@@ -32,7 +32,7 @@ image:
 > 해당 모듈을 불러올때 CPU 정보와 힙메모리 정보를 만드는 것을 아래의 명령어로 수행할 수 있습니다. 
 
 <code>node --cpu-prof --heap-prof -e 
-<span style=color:red>"require('request')"</span><code>
+<span style=color:red>"require('request')"</span></code>
 
 * requst 모듈은 이제 더 이상 지원하지 않는걸로 알고 있고 supervisor 라는 모듈을 사용한다고 들었는데...? 
 
