--- a/_posts/2020-08-30-Electron 성능 향상기.md
+++ b/_posts/2020-08-30-Electron 성능 향상기.md
@@ -33,7 +33,12 @@ image:
 > 해당 모듈을 불러올때 CPU 정보와 힙메모리 정보를 만드는 것을 아래의 명령어로 수행할 수 있습니다.
 
 <code>node --cpu-prof --heap-prof -e
-<span style=color:red>"require('request')"</span></code>
+<span style=color:red>"require('request')"</span>
+
+<img src="/node-cpu-prof.PNG"></img>
+<span>해당 명령어가 실행이 안되는 이슈가 있어서 찾아보니</span>
+<span>해당 명령어는 NODE 사이트를 확인해보니 12.0.0 노드버전 부터 지원한다고 하네요</span>
+</code>
 
 - requst 모듈은 이제 더 이상 지원하지 않는걸로 알고 있고 supervisor 라는 모듈을 사용한다고 들었는데...?
 
@@ -42,6 +47,21 @@ image:
 > <span style="color:skyblue">Memory</span>
 > 탭에서 각각 분석 할 수 있다고 합니다.
 
-<code>
-  <img src="node-cpu-prof.PNG"></img>
-</code>
+![jenkins](https://cdn.rawgit.com/electron/electron/c5320b395183cef7b36736050cfd236eb5d37b45//docs/images/performance-cpu-prof.png)
+![jenkins](https://cdn.rawgit.com/electron/electron/c5320b395183cef7b36736050cfd236eb5d37b45//docs/images/performance-heap-prof.png)
+
+## Notices
+
+---
+
+영어공부를 통해서 영문자료를 번역하다보니 오역도 많고 모자란 부분이 많습니다
+공식문서 보시면서 확인하시는걸 추천드려요!
+{: .notice}
+
+#### 참조
+
+---
+
+[Node 공식문서](https://nodejs.org/api/cli.html#cli_cpu_prof) <br>
+[Electron 공식문서](https://www.electronjs.org/) <br>
+[Electron 공식문서 성능](https://www.electronjs.org/docs/tutorial/performance)
