--- a/_posts/2020-08-30-Electron 성능 향상기.md
+++ b/_posts/2020-08-30-Electron 성능 향상기.md
@@ -35,7 +35,7 @@ image:
 <code>node --cpu-prof --heap-prof -e
 <span style=color:red>"require('request')"</span>
 
-<img src="/node-cpu-prof.PNG"></img>
+<img src="https://github.com/rumor1993/rumor1993.github.io/blob/master/img/node-cpu-prof.PNG?raw=true"></img>
 <span>해당 명령어가 실행이 안되는 이슈가 있어서 찾아보니</span>
 <span>해당 명령어는 NODE 사이트를 확인해보니 12.0.0 노드버전 부터 지원한다고 하네요</span>
 </code>
