--- a/_posts/2020-08-30-Electron 성능 향상기.md
+++ b/_posts/2020-08-30-Electron 성능 향상기.md
@@ -35,9 +35,9 @@ image:
 <code>node --cpu-prof --heap-prof -e
 <span style=color:red>"require('request')"</span>
 
-<img src="https://github.com/rumor1993/rumor1993.github.io/blob/master/img/node-cpu-prof.PNG?raw=true" style="margin-left:2%"></img>
-<span>해당 명령어가 실행이 안되는 이슈가 있어서 찾아보니</span>
-<span>해당 명령어는 NODE 사이트를 확인해보니 12.0.0 노드버전 부터 지원한다고 하네요</span>
+<img src="https://github.com/rumor1993/rumor1993.github.io/blob/master/img/node-cpu-prof.PNG?raw=true" style="margin-left:2%">
+<span style="color:orangered">해당 명령어가 실행이 안되는 이슈가 있어서 찾아보니</span><br>
+<span style="color:orangered">해당 명령어는 NODE 사이트를 확인해보니 12.0.0 노드버전 부터 지원한다고 하네요</span>
 </code>
 
 - requst 모듈은 이제 더 이상 지원하지 않는걸로 알고 있고 supervisor 라는 모듈을 사용한다고 들었는데...?
