--- a/_posts/2020-08-30-Electron 성능 향상기.md
+++ b/_posts/2020-08-30-Electron 성능 향상기.md
@@ -5,7 +5,7 @@ excerpt: ""
 categories: [Electron 성능향상을 위한 7가지]
 comments: true
 image:
-  feature: https://raw.githubusercontent.com/rocketlaunchr/electron-alert/HEAD/assets/electronalert.png
+  feature: https://repository-images.githubusercontent.com/9384267/479d2500-5c54-11e9-8b67-65ac52c9b3f3
   credit: electron-alert
   creditlink: https://www.npmjs.com/package/electron-alert?activeTab=readme
 ---
