Electron 2.적절한 시기에 모듈 불러오기

--- a/_posts/2020-09-04-Electron 성능 향상기 2.md
+++ b/_posts/2020-09-04-Electron 성능 향상기 2.md
@@ -44,6 +44,8 @@ image:
 
 아래 예시를 고려해보면
 
+## 어떻게?
+
 ```js
 const fs = require("fs");
 const fooParser = require("foo-parser");
@@ -78,3 +80,18 @@ module.exports = { parser }
 ```
 
 getParsedFiles가 필요한 시점에 foo-parser를 require() 하게 되면 필요한 시점에 리소스를 가져온다.
+
+## Notices
+
+---
+
+영어공부를 통해서 영문자료를 번역하다보니 오역도 많고 모자란 부분이 많습니다 공식문서 보시면서 확인하시는걸 추천드려요!
+{: .notice}
+
+#### 참조
+
+---
+
+[Node 공식문서](https://nodejs.org/api/cli.html#cli_cpu_prof) <br>
+[Electron 공식문서](https://www.electronjs.org/) <br>
+[Electron 공식문서 성능](https://www.electronjs.org/docs/tutorial/performance)
