이미지경로

--- a/_posts/2020-09-19-별똥별 만들기1.md
+++ b/_posts/2020-09-19-별똥별 만들기1.md
@@ -26,7 +26,7 @@ image:
 
 ## 앱을 만들기-1
 
-![서버구성도](/img/WYBH_구성.PNG)<br>
+![서버구성도](/img/WYBH_구성.png)<br>
 L4, LoadBalance, 서버이중화는 개나 줘버려라
 
 어플을 만들고 나면 이용하는 사람은 아마도 나와 내 친구 뿐일테니 서버구성에 크게 신경쓰지 않는다 <br>
@@ -151,10 +151,10 @@ app.get("/users/:id", function (req, res) {
    Table : Users
    | Name | DataType | Length | Primary Key | Not Null |
    |----------|:-------------:|------:|:-------------:|------:|
-   | ID | character varying | 50 | Y | Y
-   | NAME | character varying | 20 | | Y
-   | SEX | character varying | 2 | | Y
-   | AGE | character varying | 3 | | Y
+   | ID | character varying | 50 | Y | Y |
+   | NAME | character varying | 20 | | Y |
+   | SEX | character varying | 2 | | Y |
+   | AGE | character varying | 3 | | Y |
    | AREA | character varying | 10 | | Y
    | RGSN_DTTM | character varying | 20 | | Y
    | EDIT_DTTM | character varying | 20 |
