--- a/_posts/2020-09-19-별똥별 만들기1.md
+++ b/_posts/2020-09-19-별똥별 만들기1.md
@@ -26,6 +26,8 @@ image:
 
 ## 앱을 만들기-1
 
+---
+
 ![서버구성도](/img/WYBH_구성.png)<br>
 L4, LoadBalance, 서버이중화는 개나 줘버려라
 
@@ -42,6 +44,8 @@ SSL처리를 진행할 예정이다. Route53을 이용하는 비용을 지불하
 
 ## 앱을 만들자-2
 
+---
+
 EC2에 서버로 사용할 OS를 고민하던 와중 서버구성에는 역시 CentOS라고 생각해 인스턴스를 선택했다<br>
 하지만 불행히도 버전을 6으로 설치해서 조금의 고생을 해버렸다..<br>
 
@@ -53,7 +57,9 @@ Node 12 버전대를 사용해야하는데 CentOS6의 경우는 해당 버전을
 
 ## 앱을 만들자-3
 
-1. 회원가입 API 수정
+---
+
+## 1. 회원가입 API 수정
 
 ```js
 app.post("/users", function (req, res) {
@@ -108,7 +114,7 @@ app.post("/users", function (req, res) {
 
   이해력이 드럽게 부족한데 쓸데없이 이해를 못하면 쓰기가 싫다 ....
 
-2. 유저정보 API 추가
+## 2. 유저정보 API 추가
 
 ```js
 app.use(bodyParser.json());
@@ -147,31 +153,33 @@ app.get("/users/:id", function (req, res) {
   유저 한명의 정보를 얻기위해서는 /users/:id 값을 사용해 찾도록 <br>
   처리를 했다
 
-3. 테이블 생성<br>
-   Table : Users
-   | Name | DataType | Length | Primary Key | Not Null |
-   |----------|:-------------:|------:|:-------------:|------:|
-   | ID | character varying | 50 | Y | Y |
-   | NAME | character varying | 20 | | Y |
-   | SEX | character varying | 2 | | Y |
-   | AGE | character varying | 3 | | Y |
-   | AREA | character varying | 10 | | Y
-   | RGSN_DTTM | character varying | 20 | | Y
-   | EDIT_DTTM | character varying | 20 |
-   | PASSWORD | character varying | 100 |
-   | TOKEN | character varying | 100 |
+## 3. 테이블 생성
 
-Table : Message
-<br>
-| Name | DataType | Length | Primary Key | Not Null |
-|----------|:-------------:|------:|:-------------:|------:|
-| MSG_SRNO | character varying | 50 | Y | Y
-| ROOM_SRNO | character varying | 15 | | Y
-| CONT | TEXT | | | Y
-| SENDER | character varying | 20 | | Y
-| RECIPIENT | character varying | 20 | | Y
-| SEND_DTTM | character varying | 20 | | Y
-| NOTICE_YN | character varying | 1 |
+### Users Table
+
+| Name      |     DataType      | Length | Primary Key | Not Null |
+| --------- | :---------------: | -----: | :---------: | -------: |
+| ID        | character varying |     50 |      Y      |        Y |
+| NAME      | character varying |     20 |             |        Y |
+| SEX       | character varying |      2 |             |        Y |
+| AGE       | character varying |      3 |             |        Y |
+| AREA      | character varying |     10 |             |        Y |
+| RGSN_DTTM | character varying |     20 |             |        Y |
+| EDIT_DTTM | character varying |     20 |
+| PASSWORD  | character varying |    100 |
+| TOKEN     | character varying |    100 |
+
+### Message Table
+
+| Name      |     DataType      | Length | Primary Key | Not Null |
+| --------- | :---------------: | -----: | :---------: | -------: |
+| MSG_SRNO  | character varying |     50 |      Y      |        Y |
+| ROOM_SRNO | character varying |     15 |             |        Y |
+| CONT      |       TEXT        |        |             |        Y |
+| SENDER    | character varying |     20 |             |        Y |
+| RECIPIENT | character varying |     20 |             |        Y |
+| SEND_DTTM | character varying |     20 |             |        Y |
+| NOTICE_YN | character varying |      1 |
 
 - 음... DTTM의 경우는 DATE타입을 써도 될거 같은데 습관적으로 character로 해버렸다<br>
   DB관련 공부를 좀더 해야하겠다..
