--- a/_posts/2020-09-19-별똥별 만들기1.md
+++ b/_posts/2020-09-19-별똥별 만들기1.md
@@ -19,8 +19,9 @@ image:
 돈도 벌고 싶다...<br>
 
 일을 마치고 자취방에 돌아와 항상 같이 사는 친구와 하는 이야기이다 <br>
-상상만 하고 행복회로를 돌리던 중 아이템을 구상하다가 유투브 광고에 나온 소개팅 앱!<br>
-소개팅 앱을 다운받아서 사용해보고 망할 외모지상주의를 느끼고 익명성에 숨어서 채팅을 하는 앱을 만들기로 했다<br>
+상상만 하고 행복회로를 돌리며 지내다 유투브 광고에 나온 소개팅 앱!<br>
+소개팅 앱을 다운받아서 사용해보고 망할 외모지상주의에 환멸을 느끼고<br>
+익명성에 숨어서 채팅을 하는 앱을 만들기로 했다<br>
 
 ... 근데 비슷한 앱들이 너무 많다 그래도 우리가 하면 다를 거라는 망상을 가지고 시작을 하기로 했다
 
@@ -35,7 +36,7 @@ L4, LoadBalance, 서버이중화는 개나 줘버려라
 만드는것을 목표로 빠르게 진행을 할 예정이다 <br>
 
 간단한 앱을 만들기 위해 WAS / WEB 기능을 같이할 수 있는 Node+Express를 사용하기로 했다<br>
-Tomcat / Jboss 만 사용했던 상태라 Node를 잘 다룰순 없지만 우선 가볍게 프로젝트를 진행한다면 <br>
+Apache + Tomcat / Jboss 만 사용했던 상태라 Node를 잘 다룰순 없지만 우선 가볍게 프로젝트를 진행한다면 <br>
 노드가 좀 더 적합해 보였다.<br>
 
 도메인을 구매하기 위해서 여러 사이트를 돌아다녀보고 만원짜리 도메인을 샀다. 드럽게 비싸다... <br>
