--- a/_posts/2020-09-27-별똥별 만들기2.md
+++ b/_posts/2020-09-27-별똥별 만들기2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: WYBH 프로젝트-2) 채팅앱을 만들자
+title: WYBH 프로젝트-2) 채팅앱을 만들자 (채팅서버)
 excerpt: ""
 categories: [WYBH 프로젝트]
 comments: true
